# JustReeeeead

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  library.rs  llm.rs  main.rs  pdf.rs  settings.rs
src/lib/: Sidebar.svelte  api.ts  backgroundTranslation.ts  search.test.ts  search.ts  selection.test.ts  selection.ts  translationCache.test.ts  translationCache.ts  translationState.test.ts  translationState.ts  types.ts
src/routes/: +page.svelte
