[package]
name = "justreeeeead"
version = "0.0.1"
description = "A fast AI-assisted PDF reader for papers."
authors = ["ForestWarbler"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "justreeeeead_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.2.0", features = [] }

[dependencies]
tauri = { version = "=2.5.1", features = [] }
tauri-plugin-dialog = "=2.2.2"
tauri-plugin-opener = "=2.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
mupdf = { version = "0.7.0", default-features = false, features = ["serde"] }
reqwest = { version = "=0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Keep Tauri's permissive internal semver ranges from drifting past Rust 1.85.0.
plist = "=1.7.0"
idna = "=1.0.3"
idna_adapter = "=1.0.0"
serde_with = "=3.12.0"
tauri-codegen = "=2.2.0"
tauri-macros = "=2.2.0"
tauri-runtime = "=2.6.0"
tauri-runtime-wry = "=2.6.0"
tauri-utils = "=2.4.0"
time = "=0.3.41"
url = "=2.5.4"

[dev-dependencies]
tempfile = "3"
